# YouthSync

./: Cargo.toml  LICENSE  README.md
frontend/: index copy.html  index.html
migrations/: 20250708_create_attendance.sql
src/: main copy.rs  main.rs
